@@ -26,7 +26,6 @@ import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -126,7 +125,7 @@ public class VirtualHostRecoveryTest extends HttpTestBase
 
     private void changeState(final String url, final String desiredState) throws Exception
     {
-        Map<String, Object> attributes = Collections.singletonMap(ConfiguredObject.DESIRED_STATE, desiredState);
+        Map<String, Object> attributes = Map.of(ConfiguredObject.DESIRED_STATE, desiredState);
         getHelper().submitRequest(url, "POST", attributes, SC_OK);
     }
 
